# shmem4py

./: .gitignore  .mypy.ini  .pylintrc  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  INSTALL.rst  LICENSE.md  MANIFEST.in  README.md  README.rst  makefile  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: containers.yml  main.yml  native.yml  release.yml
demo/: alltoall.py  broadcast.py  collect.py  fcollect.py  hello.py  lock.py  lock_oo.py  makefile  pi.py  ping.py  race_winner.py  race_winner_test.py  rotget.py  rotput.py
demo/api/: addr.py  hello.py  lock.py  makefile  ping.py  query.py  rotget.py  rotput.py
docker/oshmem/: Dockerfile
docker/oshmem_fedora/: Dockerfile
docker/oshmem_ubuntu/: Dockerfile
docker/oshmpi/: Dockerfile
docker/oshmpi_fedora/: Dockerfile
docker/oshmpi_ubuntu/: Dockerfile
docker/osss/: Dockerfile
docker/osss_fedora/: Dockerfile
docker/osss_ubuntu/: Dockerfile
docker/sos/: Dockerfile
docker/sos_fedora/: Dockerfile
docker/sos_ubuntu/: Dockerfile
docs/: conf.py  examples.rst  index.rst  installation.rst  introduction.rst  requirements.txt  shmem.rst
joss/: makefile  paper.bib  paper.md
shmem4py/: __init__.py  __main__.py  api.pyi  shmem.py
shmem4py/src/: api_build.py  fficompiler.py  generate.py  libshmem.c  libshmem.h  shmemcc.py
shmem4py/src/libshmem/: error.h  fallback.h  initfini.h  memalloc.h
src/: apicodegen.py  ffibuilder.py  libshmem.c  libshmem.h
src/libshmem/: error.h  fallback.h  hdltypes.h  memalloc.h
src/libshmem/compat/: cray.h  (+6 more)
src/shmem4py/: __init__.py  __main__.py  shmem.py
test/: coverage.sh  test_alloc.py  test_amo.py  test_buf.py  test_coarray.py  test_coll.py  test_ctx.py  test_info.py  test_lock.py  test_prof.py  test_ptr.py  test_query.py  test_rc.py  test_reduce.py  test_rma.py  test_signal.py  test_sync.py  test_team.py
(+10 files in other folders)
