[metadata]
name = shmem4py
version = attr: shmem4py.__version__
license = BSD
description = Python bindings for OpenSHMEM
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.comm/mpi4py/shmem4py
author = Lisandro Dalcin
author_email = dalcinl@gmail.com

setup_requires = cffi>=1.13
install_requires = cffi>=1.13,numpy>=1.12
python_requires = >=3.7


[coverage:run]
parallel = True
branch = True
source = shmem4py
[coverage:paths]
source = */shmem4py
