[metadata]
name = shmem4py
version = attr: shmem4py.__version__
description = Python bindings for OpenSHMEM
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD-2-Clause
license_files = LICENSE.md
url = https://github.comm/mpi4py/shmem4py
author = Lisandro Dalcin
author_email = dalcinl@gmail.com

[options]
packages =
    shmem4py
package_dir =
    =src
install_requires =
    cffi>=1.13
    numpy>=1.12
python_requires = >=3.7
[options.package_data]
shmem4py =
    py.typed
    api.pyi


[coverage:run]
parallel = True
branch = True
source = shmem4py
[coverage:paths]
source =
  src/shmem4py
  */shmem4py
